--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -73,7 +73,7 @@
   <header>SMART HEALTHCARE PREDICTION</header>
 
   <nav>
-    <a href="{{ url_for('home') }}">Home</a>
+    <a href="{{ url_for('index') }}">Home</a>
     <a href="{{ url_for('analytics') }}">Analytics</a>
   </nav>
 
